<resources>
    <!--You can change App Name here-->
    <string name="app_name">Prank Sound</string>

    <string name="_5s">5s</string>
    <string name="_10s">10s</string>
    <string name="_1m">1m</string>
    <string name="_30s">30s</string>
    <string name="_3s">3s</string>
    <string name="_5m">5m</string>

    <string name="_off">Off</string>
    <string name="sound">Sound</string>
    <string name="favorite">Favorite</string>
    <string name="language">Language</string>

    <string name="advertisement">Advertisement</string>
    <string name="settings">Settings</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="loop">Loop</string>
    <string name="time">Time</string>
    <string name="exit">Exit</string>
    <string name="do_you_want_to_exit">Do you want to exit?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <!-- Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="home">Home</string>
    <string name="create_sound">Create Sound</string>
    <string name="favorites">Favorites</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="setting">Setting</string>

    <string name="create">Create</string>

    <string name="no_favotires">No Favorites to show</string>

    //leaderboard
    <string name="count_play">24452132 plays</string>
    <string name="missle">Missle</string>
    <string name="coughing">Coughing</string>
    <string name="bell_4">Bell 4</string>
    <string name="hair_clipper_4">Hair Clipper 4</string>

    //setting
    <string name="feed_back">Feedback</string>
    <string name="rate">Rate 5 stars</string>
    <string name="share">Share to friends</string>
    <string name="vibration">Vibration</string>

    //create
    <string name="no_sound_to_show">No sound to show</string>
    <string name="click_the_button">Click the button create to add new sound</string>

    //sound detail
    <string name="play_after">Play after</string>

    //record
    <string name="record">Record</string>
    <string name="record_here">Record here</string>
    <string name="time_record">00:00/00:30</string>

    <string name="recorder">Recorder</string>
    <string name="effects">Effects</string>
    <string name="image">image</string>

    //edit record
    <string name="voice_change">Voice Change</string>
    <string name="original">Original</string>
    <string name="helium">Helium</string>
    <string name="robot">Robot</string>
    <string name="radio">Radio</string>
    <string name="backward">Backward</string>
    <string name="indoor">Indoor</string>

    <string name="discard">Discard this voice effect?</string>

    <string name="air_horn">Air Horn</string>
    <string name="hair_clipper">Hair Clipper</string>
    <string name="fart">Fart</string>
    <string name="ghost">Ghost</string>
    <string name="count_down">Count Down</string>
    <string name="gun">Gun</string>
    <string name="halloween">Halloween</string>
    <string name="snore">Snore</string>
    <string name="meme">Meme</string>
    <string name="save">SAVE</string>
    <string name="cancle">CANCLE</string>
    <string name="enter_name">Enter name</string>
    <string name="save_as">Save As</string>
    <string name="select">Select</string>
    <string name="german">German</string>
    <string name="italian">Italian</string>
    <string name="portuguese">Portuguese</string>
    <string name="french">French</string>
    <string name="hindi">Hindi</string>
    <string name="spanish">Spanish</string>
    <string name="english">English</string>
    <string name="type_your_message">Type your message</string>
    <string name="send">Send</string>
    <string name="no_found_favorite_sounds_yet">No found favorite sounds yet!</string>
    <string name="play">Play</string>
    <string name="event">Event</string>
    <string name="new_">New</string>
    <string name="icon_advertising">Icon advertising</string>
    <string name="open">Open</string>
    <string name="test_sound">Test Sound</string>
    <string name="this_action_can_contain_ad">This action can contain ad</string>
    <string name="introduce">Introduce</string>
    <string name="next">Next</string>
    <string name="title_intro_1">Funny Prank Sounds</string>
    <string name="title_intro_2">100+ Hilarious Sound Effects</string>
    <string name="title_intro_3">Laugh Wherever You Are!</string>
    <string name="start">Start</string>
    <string name="background">Background</string>
    <string name="item_image">Item image</string>
    <string name="create_effect">Create effect</string>
    <string name="rate_us">Rate us</string>
    <string name="more_app">More app</string>
    <string name="other">Other</string>
    <string name="no_create_sound">No Create Sound</string>
    <string name="empty">Empty</string>
    <string name="your_sound">Your sound</string>
    <string name="tap_here_to_record">Tap here to record</string>
    <string name="button_record">Button record</string>
    <string name="button_reload">Button reload</string>
    <string name="button_pause">Button pause</string>
    <string name="button_next">Button next</string>
    <string name="add_effect">Add Effect</string>
    <string name="replay">Replay</string>
    <string name="cut">Cut</string>
    <string name="ads">Ads</string>
    <string name="timer">Timer</string>
    <string name="may_be_later">May be later</string>
    <string name="do_you_like_the_app">Do you like the app?</string>
    <string name="let_us_know_your_experience">Let us know your experience</string>
    <string name="the_best_we_can_get">The best we can get 🥳</string>

    //Rating
    <string name="title_dialog_rating_1">Oh, no!</string>
    <string name="content_dialog_rating_1_2_3">Please give us some feedback</string>
    <string name="title_dialog_rating_5">We love you too!</string>
    <string name="content_dialog_rating_4_5">Thanks for your feedback</string>
    <string name="title_rate_default">Do you like the app?</string>
    <string name="content_rate_default">Let us know your experience</string>
    <string name="please_give_us_some_feedback">Please give us some feedback</string>
    <string name="thank_you">Thank you!</string>
    <string name="share_to">Share to</string>
    <string name="version">Version</string>
    <string name="privacy_policy_link">https://battery-charger-animatio-76c82.web.app/policy/</string>
    <string name="no_favourite_sound">No Favourite Sound</string>
    <string name="ok">OKAY</string>
    <string name="cancel">Cancel</string>
    <string name="volume_small">Volume small</string>
    <string name="volume_loud">Volume loud</string>
    <string name="more_sound">More sounds:</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_that_you_want_to_delete_this_record">Are you sure that you want to delete this record?</string>
    <string name="top_1">Top 1</string>
    <string name="top_2">Top 2</string>
    <string name="top_3">Top 3</string>
    <string name="top_8">Top 8</string>
    <string name="top_7">Top 7</string>
    <string name="top_6">Top 6</string>
    <string name="top_5">Top 5</string>
    <string name="top_4">Top 4</string>
    <string name="_23441244_plays">23441244 plays</string>
    <string name="_20242424_plays">20242424 plays</string>
    <string name="_17442424_plays">17442424 plays</string>
    <string name="_10344141_plays">10344141 plays</string>
    <string name="_10344131_plays">10344131 plays</string>
    <string name="_10343102_plays">10343102 plays</string>
    <string name="_9944057_plays">9944057 plays</string>
    <string name="chosen">Chosen</string>
</resources>