<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_100sdp"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_options"
    android:elevation="@dimen/_4sdp"
    android:translationZ="@dimen/_1sdp">

    <LinearLayout
        android:id="@+id/optionView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="@dimen/_10sdp"
        android:paddingStart="@dimen/_12sdp"
        android:paddingEnd="@dimen/_23sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/btnOff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:drawablePadding="@dimen/_5sdp"
            android:fontFamily="@font/nunito_regular"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:text="@string/_off"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_11ssp" />

        <TextView
            android:id="@+id/btn5s"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:fontFamily="@font/nunito_regular"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:text="@string/_5s"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_11ssp" />

        <TextView
            android:id="@+id/btn10s"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:fontFamily="@font/nunito_regular"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:text="@string/_10s"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_11ssp" />

        <TextView
            android:id="@+id/btn30s"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:fontFamily="@font/nunito_regular"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:text="@string/_30s"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_11ssp" />

        <TextView
            android:id="@+id/btn1m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:fontFamily="@font/nunito_regular"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:text="@string/_1m"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_11ssp" />

        <TextView
            android:id="@+id/btn5m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_regular"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:text="@string/_5m"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_11ssp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>