<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/background"
        android:scaleType="fitXY"
        android:src="@drawable/bg_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rlLet"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_43sdp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.wa.pranksound.utils.customview.StrokeTextView
            android:id="@+id/txtTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/_40sdp"
            android:fontFamily="@font/nunito_black"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/add_effect"
            android:textColor="#D85B00"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:strokeColor="@color/white"
            app:strokeWidth="@dimen/_5sdp" />

        <ImageButton
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:background="@color/transparent"
            android:contentDescription="@string/backward"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_sub_main"
        android:paddingHorizontal="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rlLet">

        <LinearLayout
            android:id="@+id/ll_control"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_pause"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:src="@drawable/ic_start" />

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_6sdp"
                android:layout_weight="1"
                android:progressBackgroundTint="#41494C"
                android:thumb="@drawable/custom_thumb"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_time_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seekBar"
                tool:text="00:00" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_time_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tool:text="00:00" />

        <LinearLayout
            android:id="@+id/ll_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_time_start">

            <ImageView
                android:id="@+id/img_replay"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:contentDescription="@string/replay"
                android:src="@drawable/img_replay"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/img_cut"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:contentDescription="@string/cut"
                android:src="@drawable/img_cut"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llVoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_control">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/voice_change"
                android:textSize="@dimen/_11ssp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/original"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/_3sdp"
                    android:gravity="center"
                    android:text="@string/original"
                    app:drawableTopCompat="@drawable/ic_original" />

                <TextView
                    android:id="@+id/iv_chipmunk"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="@dimen/_3sdp"
                    android:gravity="center"
                    android:text="@string/helium"
                    app:drawableTopCompat="@drawable/ic_helium" />

                <TextView
                    android:id="@+id/ivRobot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/_3sdp"
                    android:gravity="center"
                    android:text="@string/robot"
                    app:drawableTopCompat="@drawable/ic_robot" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/iv_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/_3sdp"
                    android:gravity="center"
                    android:text="@string/radio"
                    app:drawableTopCompat="@drawable/ic_radio" />

                <TextView
                    android:id="@+id/backward"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="@dimen/_3sdp"
                    android:gravity="center"
                    android:text="@string/backward"
                    app:drawableTopCompat="@drawable/ic_backward" />

                <TextView
                    android:id="@+id/iv_cave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/_3sdp"
                    android:gravity="center"
                    android:text="@string/indoor"
                    app:drawableTopCompat="@drawable/ic_original" />
            </LinearLayout>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="#000"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_46sdp"
            android:layout_marginBottom="@dimen/_25sdp"
            android:background="@drawable/bg_button"
            android:fontFamily="@font/nunito_bold"
            android:gravity="center"
            android:padding="@dimen/_14sdp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
