<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_78sdp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_6sdp">

    <FrameLayout
        android:id="@+id/cvBG"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg1"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgCate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_12sdp"
            android:contentDescription="@string/air_horn"
            android:src="@drawable/air_horn1" />

    </FrameLayout>

    <TextView
        android:id="@+id/txtSoundName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:fontFamily="@font/nunito_bold"
        android:singleLine="true"
        android:text="@string/hair_clipper"
        android:textAlignment="center"
        android:textSize="@dimen/_11ssp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/cvBG" />

    <ImageView
        android:id="@+id/img_ads"
        android:layout_width="@dimen/_14sdp"
        android:layout_height="@dimen/_14sdp"
        android:layout_alignEnd="@+id/cvBG"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:contentDescription="@string/ads"
        android:src="@drawable/ic_ads"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
