<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#66000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:background="@drawable/bg_item_language"
        android:orientation="vertical"
        android:padding="@dimen/_18sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15sdp"
            android:fontFamily="@font/nunito_bold"
            android:gravity="center"
            android:text="@string/save_as"
            android:textSize="@dimen/_16ssp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutFileName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:hintTextColor="@color/bottom_nav_text_color_selected">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextFileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button_negative"
                android:fontFamily="@font/nunito_regular"
                android:hint="@string/enter_name"
                android:maxLength="30"
                android:textSize="@dimen/_12ssp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_button_negative"
                android:gravity="center"
                android:padding="@dimen/_12sdp"
                android:text="@string/cancle"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_13ssp" />

            <TextView
                android:id="@+id/btnSave"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_button"
                android:gravity="center"
                android:padding="@dimen/_12sdp"
                android:text="@string/save"
                android:textSize="@dimen/_13ssp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>