<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/background"
            android:scaleType="fitXY"
            android:src="@drawable/bg_main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rlLet"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_43sdp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.wa.pranksound.utils.customview.StrokeTextView
                android:id="@+id/txtTitle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/_40sdp"
                android:fontFamily="@font/nunito_black"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/record"
                android:textColor="#D85B00"
                android:textSize="@dimen/_20ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:strokeColor="@color/white"
                app:strokeWidth="@dimen/_5sdp" />

            <ImageButton
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:background="@color/transparent"
                android:contentDescription="@string/backward"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ctBody"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="@dimen/_12sdp"
            android:background="@drawable/bg_sub_main"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rlLet">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/transparent"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.14">

                <ImageView
                    android:id="@+id/ivLogo"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:scaleType="fitXY"
                    android:src="@mipmap/ic_launcher" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/introTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/app_name"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cvLogo" />

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_7sdp"
                android:fontFamily="@font/nunito_medium"
                android:text="@string/version"
                android:textSize="@dimen/_11sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/introTitle" />

            <TextView
                android:id="@+id/tvTerm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_35sdp"
                android:fontFamily="@font/nunito_medium"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:text="@string/privacy_policy"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_version" />


            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_minus5sdp"
                android:background="@color/car"
                app:layout_constraintEnd_toEndOf="@+id/tvTerm"
                app:layout_constraintStart_toStartOf="@+id/tvTerm"
                app:layout_constraintTop_toBottomOf="@+id/tvTerm" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>